# roba-random

./: README.md
30 settembre 2018/ConsoleApp1/: ConsoleApp1.sln
30 settembre 2018/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
30 settembre 2018/ConsoleApp1/ConsoleApp1/Properties/: AssemblyInfo.cs
determinante NxN clion/: CMakeLists.txt  local_types.c  local_types.h  main.c
determinante matrici NxN/: determinante matrici NxN.c  determinante matrici NxN.sln  determinante matrici NxN.vcxproj  determinante matrici NxN.vcxproj.filters
determinante matrici NxN/Debug/determin.92597039.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  determinante matrici NxN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
determinante matrici NxN/x64/Debug/: determinante matrici nxn.obj.enc
determinante matrici NxN/x64/Debug/determin.92597039.tlog/: CL.command.1.tlog  link.command.1.tlog  (+3 more)
esame/: CMakeLists.txt  defs.h  element.h  elementUtil.c  elementUtil.h  file_utils.c  file_utils.h  generalUtil.c  generalUtil.h  list_3.c  list_3.h  sorting.c  sorting.h
esame/esercizio_esame_librerie/: strutture.c  strutture.h
esame/files/: eventi.txt  tariffe.txt  testing_fscanf.txt
esercizio 9 ottobre 2019/: Origine.c  esercizio 9 ottobre 2019.sln  esercizio 9 ottobre 2019.vcxproj  esercizio 9 ottobre 2019.vcxproj.filters
esercizio 9 ottobre 2019/Debug/esercizi.B24F2990.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  esercizio 9 ottobre 2019.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
