cmake_minimum_required(VERSION 3.15)
project(esame C)

set(CMAKE_C_STANDARD 11)

add_executable(esame main.c list_3.h list_3.c element.h elementUtil.c elementUtil.h generalUtil.c generalUtil.h sorting.c sorting.h file_utils.c file_utils.h esercizio_esame_librerie/strutture.c esercizio_esame_librerie/strutture.h list_2.h)